<resources>
    <string name="app_name">Meal Planner</string>
    <string name="title_home">Home</string>
    <string name="title_saved_list">Saved Recipes</string>
    <string name="title_grocery">Grocery</string>
    <string name="title_settings">Settings</string>
    <string name="api_key">6c35ec72cd1641069466c4d615813143</string>
    <!-- Preference Titles -->
    <string name="profile_header">Profile</string>
    <string name="recipe_header">Add Recipes</string>
    <string name="diet_header">Diet</string>
    <string name="grocery_header">Grocery List</string>


    <!-- Profile Preferences -->
    <string name="name_title">Your name</string>

    <!-- Recipe Preferences -->
    <string name="num_recipes_title">Number of Recipes</string>
    <string name="num_recipes_summary">The amount of recipes shown when the add button is pressed</string>


    <!-- Diet Preferences -->
    <string name="allergies_title">Pick Your Allergies</string>
    <string name="allergies_summary">A list of your allergies</string>
    <string name="lifestyle_title">Your Lifestyle</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>